# lab3_sem3

./: CMakeLists.txt  main.cpp
UI/headers/: HistogramWindow.h  MainWindow.h  SubsequenceWindow.h
UI/source/: HistogramWindow.cpp  MainWindow.cpp  SubsequenceWindow.cpp
headers/: Concepts.h  FNV1aHash.h  Histogram.h  IDictionary.h  MostFrequentSubsequences.h  MurmurHash.h  SortedSequence.h  TypeTraits.h
source/: MostFrequentSubsequences.cpp
